# newsfeed_platform

./: .coverage  .env.example  .gitignore  Makefile  README.md  mcp_config_example.json  mcp_server.sh  pyproject.toml
.cursor/rules/: cursor_rules.mdc
.github/workflows/: ci.yml
config/: sources.yaml
data/: synthetic_news.json  synthetic_news_labeled.json
docs/: EXPLANATIONS.md  field_analysis_summary.md  raw_data_analysis_summary.md
src/: config.py  main.py  mcp_server.py  tuning.py  ui.py
src/api/: routes.py
src/config/: __init__.py  config_manager.py
src/models/: api.py  domain.py
src/repositories/: news_event_repository.py
src/scheduler/: __init__.py  scheduler_manager.py
src/services/: __init__.py  ingestion_service.py
src/sources/: __init__.py  adapters.py  factory.py  fetchers.py
src/utils/: detailed_field_analyzer.py  synthetic_data_analyzer.py
tests/: conftest.py  test_api.py  test_architecture.py  test_chromadb_repository.py  test_hybrid_scoring.py  test_news_event_repository.py  test_scheduler.py  test_source_adapters.py
