[project]
name = "newsfeed-platform"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "David Graf", email = "hire@grafdavid.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
