[project]
name = "newsfeed-platform"
version = "0.1.0"
description = "Real-time IT news aggregation and filtering system with configurable sources"
readme = "README.md"
authors = [
    { name = "David Graf", email = "hire@grafdavid.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=3.4.3",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "streamlit>=1.47.1",
    "apscheduler>=3.11.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]
